--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Favorite Holiday Destination</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Heading -->
+  <h1>Switzerland</h1>
+
+  <!-- Line Break -->
+  <br>
+
+  <!-- Paragraph -->
+  <p>
+    Switzerland is a beautiful country in Europe known for its 
+    <strong>stunning mountains</strong>, crystal-clear lakes, 
+    and charming cities. It is the perfect destination for 
+    <em>nature lovers</em>, adventure seekers, and those who 
+    enjoy peaceful surroundings.
+  </p>
+
+  <!-- Ordered List: Top 5 Attractions -->
+  <h2>Top 5 Attractions</h2>
+  <ol>
+    <li><strong>Mount Matterhorn</strong> – One of the most famous peaks in the Alps.</li>
+    <li><em>Lake Geneva</em> – A breathtaking lake surrounded by vineyards and mountains.</li>
+    <li><strong>Jungfraujoch</strong> – Known as the "Top of Europe".</li>
+    <li><em>Lucerne’s Chapel Bridge</em> – A historic wooden bridge with beautiful views.</li>
+    <li><strong>Bern Old Town</strong> – A UNESCO World Heritage site with medieval architecture.</li>
+  </ol>
+
+  <!-- Unordered List: Must-Try Foods -->
+  <h2>Must-Try Foods</h2>
+  <ul>
+    <li><strong>Swiss Cheese Fondue</strong> – Melted cheese served with bread.</li>
+    <li><em>Rösti</em> – A crispy potato dish, similar to hash browns.</li>
+    <li><strong>Swiss Chocolate</strong> – World-famous and absolutely delicious.</li>
+    <li><em>Zürcher Geschnetzeltes</em> – Sliced veal in creamy mushroom sauce.</li>
+    <li><strong>Basler Läckerli</strong> – A traditional Swiss spiced biscuit.</li>
+  </ul>
 
 </body>
-
 </html>
